syntax = "proto3";

package j5.registry.github.v1.topic;

import "google/protobuf/descriptor.proto";
import "google/protobuf/empty.proto";
import "j5/messaging/v1/annotations.proto";
import "j5/registry/github/v1/checks.proto";

option go_package = "github.com/pentops/registry/gen/j5/registry/github/v1/github_tpb";

service WebhookTopic {
  option (j5.messaging.v1.config).broadcast.name = "github-webhook";

  rpc Push(PushMessage) returns (google.protobuf.Empty) {}
  rpc CheckSuite(CheckSuiteMessage) returns (google.protobuf.Empty) {}
  rpc CheckRun(CheckRunMessage) returns (google.protobuf.Empty) {}
}

message PushMessage {
  string delivery_id = 1 [(j5.messaging.v1.field).message_id = true];
  j5.registry.github.v1.Commit commit = 2;
  string ref = 3;
}

message CheckSuiteMessage {
  string delivery_id = 1 [(j5.messaging.v1.field).message_id = true];
  j5.registry.github.v1.CheckSuite check_suite = 2;
  string action = 3;
}

message CheckRunMessage {
  string delivery_id = 1 [(j5.messaging.v1.field).message_id = true];
  j5.registry.github.v1.CheckRun check_run = 2;
  string action = 3;
}
